Added working wwith database, parsing htmls and get/post methods

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,29 @@
-	<script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/lightbox.js"></script>
-    <script src="js/script.js"></script>
+	<section class="contact py-5 bg-contact">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-5 col-md-8 col-10">
+                    <div class="row items-wrapper py-3">
+                        <div class="row sm-5 col-8 floating-item first-item">
+                            <a href="/books/books.html" class="btn btn-outline-danger">More books</a>
+                        </div>
+                        <div class="row sm-5 col-8 floating-item">
+                            <a href="/p/popular-books.html" class="btn btn-outline-danger">Popular books</a>
+                        </div>
+                        <div class="row sm-5 col-8 floating-item">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/popper.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/lightbox.js"></script>
+    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="/css/style2.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/lightbox.css">
 	</body>
 </html>
