--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -3,11 +3,10 @@ body {
 }
 /* header */
 
-.popular-books-head {
+.popular-books {
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.8)), 
-    url("../images/background_book.jpeg") fixed center;
-    clip-path: polygon(0 0, 100% 0 , 100% 93%, 0 100%);
+    background: linear-gradient(rgba(250, 250, 250, .8), rgba(250, 250, 250, .9)), 
+    url(../images/bgbook5.jpeg) fixed center;
 }
 
 header {
@@ -109,6 +108,10 @@ header {
     height: 60vh;
 }
 
+.rows-books {
+    margin-top: 20px;
+}
+
 .book {
     width: 40%;
     position: relative;
@@ -116,6 +119,18 @@ header {
     border-bottom: 5px solid #777;
 }
 
+.book-card {
+    position: relative;
+    box-shadow: 5px 15px 50px #aaa;
+    max-width: 420px;
+}
+
 .myborder {
     border-top: 20px solid rgb(150, 164, 170);
+}
+
+.bg-contact {
+    height: 20vh;
+    background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.8)), 
+    url("../images/background_book.jpeg") fixed center;
 }
