--- a/includes/header.html
+++ b/includes/header.html
@@ -11,10 +11,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="images/background_book.jpeg">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style2.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/lightbox.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style2.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/lightbox.css">
+    <title>Book shop</title>
     </head>
 	<body>
+        <div class="align-self-start position-absolute">
+        <a href="/index.html">
+            <img src="/images/random_book1.jpeg" width="100" class="img-fluid m-2">
+        </a>
+        </div>
 		
