--- a/includes/header.html
+++ b/includes/header.html
@@ -18,8 +18,8 @@
     </head>
 	<body>
         <div class="align-self-start position-absolute">
-        <a href="/index.html">
-            <img src="/images/random_book1.jpeg" width="100" class="img-fluid m-2">
-        </a>
+            <a href="#">
+                <img src="/images/random_book1.jpeg" width="100" class="img-fluid m-2">
+            </a>
         </div>
 		
