--- a/includes/header.html
+++ b/includes/header.html
@@ -18,7 +18,7 @@
     </head>
 	<body>
         <div class="align-self-start position-absolute">
-            <a href="#">
+            <a href="/">
                 <img src="/images/random_book1.jpeg" width="100" class="img-fluid m-2">
             </a>
         </div>
