--- a/includes/header.html
+++ b/includes/header.html
@@ -22,4 +22,10 @@
                 <img src="/images/random_book1.jpeg" width="100" class="img-fluid m-2">
             </a>
         </div>
+        <div class="text-center search">
+            <form id="form" method="POST" action="/search/books.html">
+                <input id="searchbar" name="searchbar" class="pull-right" type="text" placeholder="Enter a stock: " required>
+                <input class="btn btn-outline-danger" type="submit" value="search" />
+            </form>
+        </div>
 		
